// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. comment lead and cartoon - medium 1`] = `
<View>
  <TileP />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileQ />
</View>
`;

exports[`2. daily universal register - medium 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F0F0F0",
      "flex": 1,
      "padding": 10,
    }
  }
>
  <Image
    style={
      Object {
        "height": 73,
        "marginVertical": 10,
        "width": 285,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#850029",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 16,
        "marginBottom": 25,
      }
    }
  >
    Daily Universal Register
  </Text>
  <TileS />
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
        "marginVertical": 25,
        "width": "100%",
      }
    }
  />
  <TileS />
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
        "marginVertical": 25,
        "width": "100%",
      }
    }
  />
  <Image
    style={
      Object {
        "height": 45,
        "width": 60,
      }
    }
  />
  <TileS />
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
        "marginVertical": 25,
        "width": "100%",
      }
    }
  />
  <Image
    style={
      Object {
        "height": 45,
        "width": 60,
      }
    }
  />
  <TileS />
</View>
`;

exports[`3. lead one and one - medium 1`] = `
<View>
  <TileA />
  <View
    style={
      Object {
        "backgroundColor": "#DBDBDB",
        "height": 1,
      }
    }
  />
  <TileB />
</View>
`;

exports[`4. lead one full width - medium 1`] = `<TileA />`;

exports[`5. lead two no pic and two - medium 1`] = `
<View>
  <TileF />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileB />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileD />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileE />
</View>
`;

exports[`6. leaders slice - medium 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F0F0F0",
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Image
      style={
        Object {
          "height": 51,
          "width": 283,
        }
      }
    />
    <View
      style={
        Object {
          "paddingBottom": 5,
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#850029",
            "fontFamily": "TimesDigitalW04-Regular",
            "fontSize": 16,
            "lineHeight": 18,
            "textAlign": "center",
          }
        }
      >
         Leading Articles 
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingBottom": 5,
      }
    }
  >
    <TileM />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileM />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileM />
  </View>
</View>
`;

exports[`7. secondary one and four - medium 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#272D34",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#272D34",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TheTimesLogo />
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#4D4D4D",
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#272D34",
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <TileN />
      </View>
    </View>
    <View>
      <TileO />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileO />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileO />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileO />
    </View>
  </View>
</View>
`;

exports[`8. secondary one - medium 1`] = `<TileA />`;

exports[`9. secondary four - medium 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
  </View>,
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
  </View>,
]
`;

exports[`10. secondary one and columnist - medium 1`] = `
<View>
  <TileT />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileH />
</View>
`;

exports[`11. secondary two and two - medium 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
  </View>,
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View>
    <TileG />
  </View>,
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View>
    <TileG />
  </View>,
]
`;

exports[`12. lead one and four slice - medium 1`] = `
Array [
  <TileI />,
  <View>
    <TileJ />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileJ />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileJ />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileJ />
  </View>,
]
`;

exports[`13. standard slice - medium 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View>
        <TileK />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
      </View>
    </View>
    <View>
      <View>
        <TileK />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
      </View>
    </View>
    <View>
      <View>
        <TileK />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
      </View>
    </View>
    <View>
      <View>
        <TileK />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
      </View>
    </View>
    <View>
      <View>
        <TileK />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`14. secondary two no pic and two - medium 1`] = `
<View>
  <TileB />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileB />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileG />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileG />
</View>
`;

exports[`15. list two and six no pic - medium 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 5,
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "paddingBottom": 5,
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
  </View>,
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View>
    <TileL />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileL />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileL />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileL />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileL />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileL />
  </View>,
]
`;

exports[`16. puzzle - medium 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TileAJ />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TileAJ />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TileAJ />
  </View>
</View>
`;

exports[`17. comment lead and cartoon - wide 1`] = `
<View>
  <TileP />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileQ />
</View>
`;

exports[`18. daily universal register - wide 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F0F0F0",
      "flex": 1,
      "padding": 10,
    }
  }
>
  <Image
    style={
      Object {
        "height": 73,
        "marginVertical": 10,
        "width": 285,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#850029",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 16,
        "marginBottom": 25,
      }
    }
  >
    Daily Universal Register
  </Text>
  <TileS />
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
        "marginVertical": 25,
        "width": "100%",
      }
    }
  />
  <TileS />
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
        "marginVertical": 25,
        "width": "100%",
      }
    }
  />
  <Image
    style={
      Object {
        "height": 45,
        "width": 60,
      }
    }
  />
  <TileS />
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
        "marginVertical": 25,
        "width": "100%",
      }
    }
  />
  <Image
    style={
      Object {
        "height": 45,
        "width": 60,
      }
    }
  />
  <TileS />
</View>
`;

exports[`19. lead one and one - wide 1`] = `
<View>
  <TileA />
  <View
    style={
      Object {
        "backgroundColor": "#DBDBDB",
        "height": 1,
      }
    }
  />
  <TileB />
</View>
`;

exports[`20. lead one full width - wide 1`] = `<TileA />`;

exports[`21. lead two no pic and two - wide 1`] = `
<View>
  <TileF />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileB />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileD />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileE />
</View>
`;

exports[`22. leaders slice - wide 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F0F0F0",
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Image
      style={
        Object {
          "height": 51,
          "width": 283,
        }
      }
    />
    <View
      style={
        Object {
          "paddingBottom": 5,
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#850029",
            "fontFamily": "TimesDigitalW04-Regular",
            "fontSize": 16,
            "lineHeight": 18,
            "textAlign": "center",
          }
        }
      >
         Leading Articles 
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingBottom": 5,
      }
    }
  >
    <TileM />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileM />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileM />
  </View>
</View>
`;

exports[`23. secondary one and four - wide 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#272D34",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#272D34",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TheTimesLogo />
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#4D4D4D",
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#272D34",
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <TileN />
      </View>
    </View>
    <View>
      <TileO />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileO />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileO />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileO />
    </View>
  </View>
</View>
`;

exports[`24. secondary one - wide 1`] = `<TileA />`;

exports[`25. secondary four - wide 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
  </View>,
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
  </View>,
]
`;

exports[`26. secondary one and columnist - wide 1`] = `
<View>
  <TileT />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileH />
</View>
`;

exports[`27. secondary two and two - wide 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
  </View>,
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View>
    <TileG />
  </View>,
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View>
    <TileG />
  </View>,
]
`;

exports[`28. lead one and four slice - wide 1`] = `
Array [
  <TileI />,
  <View>
    <TileJ />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileJ />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileJ />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileJ />
  </View>,
]
`;

exports[`29. standard slice - wide 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View>
        <TileK />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
      </View>
    </View>
    <View>
      <View>
        <TileK />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
      </View>
    </View>
    <View>
      <View>
        <TileK />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
      </View>
    </View>
    <View>
      <View>
        <TileK />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
      </View>
    </View>
    <View>
      <View>
        <TileK />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`30. secondary two no pic and two - wide 1`] = `
<View>
  <TileB />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileB />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileG />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileG />
</View>
`;

exports[`31. list two and six no pic - wide 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 5,
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "paddingBottom": 5,
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
  </View>,
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View>
    <TileL />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileL />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileL />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileL />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileL />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileL />
  </View>,
]
`;

exports[`32. puzzle - wide 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TileAJ />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TileAJ />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TileAJ />
  </View>
</View>
`;

exports[`33. comment lead and cartoon - huge 1`] = `
<View>
  <TileP />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileQ />
</View>
`;

exports[`34. daily universal register - huge 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F0F0F0",
      "flex": 1,
      "padding": 10,
    }
  }
>
  <Image
    style={
      Object {
        "height": 73,
        "marginVertical": 10,
        "width": 285,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#850029",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 16,
        "marginBottom": 25,
      }
    }
  >
    Daily Universal Register
  </Text>
  <TileS />
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
        "marginVertical": 25,
        "width": "100%",
      }
    }
  />
  <TileS />
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
        "marginVertical": 25,
        "width": "100%",
      }
    }
  />
  <Image
    style={
      Object {
        "height": 45,
        "width": 60,
      }
    }
  />
  <TileS />
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
        "marginVertical": 25,
        "width": "100%",
      }
    }
  />
  <Image
    style={
      Object {
        "height": 45,
        "width": 60,
      }
    }
  />
  <TileS />
</View>
`;

exports[`35. lead one and one - huge 1`] = `
<View>
  <TileA />
  <View
    style={
      Object {
        "backgroundColor": "#DBDBDB",
        "height": 1,
      }
    }
  />
  <TileB />
</View>
`;

exports[`36. lead one full width - huge 1`] = `<TileA />`;

exports[`37. lead two no pic and two - huge 1`] = `
<View>
  <TileF />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileB />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileD />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileE />
</View>
`;

exports[`38. leaders slice - huge 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F0F0F0",
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Image
      style={
        Object {
          "height": 51,
          "width": 283,
        }
      }
    />
    <View
      style={
        Object {
          "paddingBottom": 5,
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#850029",
            "fontFamily": "TimesDigitalW04-Regular",
            "fontSize": 16,
            "lineHeight": 18,
            "textAlign": "center",
          }
        }
      >
         Leading Articles 
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingBottom": 5,
      }
    }
  >
    <TileM />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileM />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileM />
  </View>
</View>
`;

exports[`39. secondary one and four - huge 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#272D34",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#272D34",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TheTimesLogo />
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#4D4D4D",
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#272D34",
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <TileN />
      </View>
    </View>
    <View>
      <TileO />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileO />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileO />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileO />
    </View>
  </View>
</View>
`;

exports[`40. secondary one - huge 1`] = `<TileA />`;

exports[`41. secondary four - huge 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
  </View>,
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
  </View>,
]
`;

exports[`42. secondary one and columnist - huge 1`] = `
<View>
  <TileT />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileH />
</View>
`;

exports[`43. secondary two and two - huge 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
  </View>,
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View>
    <TileG />
  </View>,
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View>
    <TileG />
  </View>,
]
`;

exports[`44. lead one and four slice - huge 1`] = `
Array [
  <TileI />,
  <View>
    <TileJ />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileJ />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileJ />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileJ />
  </View>,
]
`;

exports[`45. standard slice - huge 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View>
        <TileK />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
      </View>
    </View>
    <View>
      <View>
        <TileK />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
      </View>
    </View>
    <View>
      <View>
        <TileK />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
      </View>
    </View>
    <View>
      <View>
        <TileK />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
      </View>
    </View>
    <View>
      <View>
        <TileK />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`46. secondary two no pic and two - huge 1`] = `
<View>
  <TileB />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileB />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileG />
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <TileG />
</View>
`;

exports[`47. list two and six no pic - huge 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 5,
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "paddingBottom": 5,
          "width": "50%",
        }
      }
    >
      <TileC />
    </View>
  </View>,
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View>
    <TileL />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileL />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileL />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileL />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileL />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <TileL />
  </View>,
]
`;

exports[`48. puzzle - huge 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TileAJ />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TileAJ />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TileAJ />
  </View>
</View>
`;
